--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
+  "main": "web.js",
+  "engines": {
+    "node": "10.x"
+  },
+
   "scripts": {
-    "start": "node server.js && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -32,5 +37,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy":"http://localhost:8080"
 }
